[package]
name = "swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
custom-panic = []

[dependencies]
anchor-lang = { version ="0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program="2.0.3"
